Added double arrow icon for large photos on research, ideation, and design pages

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/design.html
@@ -160,7 +160,10 @@
                     Analogous Domains</b2></button>
                 </div>
                 <div class="tab-page active blue">
-                    <img class="tab-cover-image" src="images/design/client-feedback.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/client-feedback.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -183,7 +186,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/design/segmenting.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/segmenting.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -206,7 +212,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/design/analogous-domain.png">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/analogous-domain.png">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -260,7 +269,10 @@
 		      <div>
 		        <h2>Ambient Animations</h2>
 		        <b2>Ambient animation for graphs shows current state. Ambient animation for orders shows order progress. We planned to ask users about other areas of use.</b2>
-		        <img class="slideshow-img" src="images/research/slideshow-pic2.png">
+                <div class="slideshow-img-wrapper">
+                  <img class="slideshow-img" src="images/research/slideshow-pic2.png">
+                  <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots" onclick=""></span>
 		          <span class="slideshow-dots active" onclick=""></span>
@@ -275,7 +287,10 @@
 		      <div>
 		        <h2>Virtual Assistant</h2>
 		        <b2>Focused on information disclosure and customization. Traders find necessary info before executing action. Then, traders customize alerts to prompt action later.</b2>
-		        <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                <div class="slideshow-img-wrapper">
+                  <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                  <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots" onclick=""></span>
 		          <span class="slideshow-dots" onclick=""></span>
@@ -290,7 +305,10 @@
 		      <div>
 		        <h2>Space-Saving Bubble</h2>
 		        <b2>This design was an unconventional, futuristic take. We wanted to challenge the current visual standard. We tested call-to-action through bubble alerts.</b2>
-		        <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                <div class="slideshow-img-wrapper">
+                  <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                  <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots" onclick=""></span>
 		          <span class="slideshow-dots" onclick=""></span>
@@ -351,7 +369,10 @@
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 1)"><b2>Observations</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/design/directed-storytelling.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/directed-storytelling.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">What We Did</div>
@@ -372,7 +393,10 @@
                     </div>
                 </div>
                 <div class="tab-page blue">
-                    <img class="tab-cover-image" src="images/design/observations.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/observations.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Some Results</div>
@@ -406,7 +430,10 @@
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 2)"><b2>Clustering</b2></button>
                 </div>
                 <div class="tab-page active blue">
-                    <img class="tab-cover-image" src="images/design/feedback-grid.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/feedback-grid.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">What We Did</div>
@@ -428,7 +455,10 @@
                 </div>
 
                 <div class="tab-page blue">
-                    <img class="tab-cover-image" src="images/design/kano-model.png">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/kano-model.png">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">What We Did</div>
@@ -450,7 +480,10 @@
                 </div>
 
                 <div class="tab-page blue">
-                    <img class="tab-cover-image" src="images/design/clustering-slide.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/clustering-slide.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">What We Did</div>
@@ -503,7 +536,10 @@
 		      <div>
 		        <h2>Customizable Alerts</h2>
 		        <b2>Etiam porta sem malesuada magna mollis euismod. Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus </b2>
-		        <img class="slideshow-img" src="images/research/slideshow-pic2.png">
+                <div class="slideshow-img-wrapper">
+                  <img class="slideshow-img" src="images/research/slideshow-pic2.png">
+                  <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots" onclick=""></span>
 		          <span class="slideshow-dots active" onclick=""></span>
@@ -518,7 +554,10 @@
 		      <div>
 		        <h2>Minimized View</h2>
 		        <b2>Etiam porta sem malesuada magna mollis euismod. Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus </b2>
-		        <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                <div class="slideshow-img-wrapper">
+                  <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                  <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                </div>
 		        <ul class="red-bullet">
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots" onclick=""></span>
@@ -534,7 +573,10 @@
 		      <div>
 		        <h2>Futuristic Designs</h2>
 		        <b2>Etiam porta sem malesuada magna mollis euismod. Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus </b2>
-		        <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                <div class="slideshow-img-wrapper">
+                  <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                  <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots" onclick=""></span>
 		          <span class="slideshow-dots" onclick=""></span>
@@ -557,7 +599,10 @@
                     <button class="tab-navbutton blue" onclick="changeTab(this, 1)"><b2>Analogous Domains</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/design/usertesting.png">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/usertesting.png">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div> 
                     <div class="tab-content">
                         <div>
                             <div class="h3">Workflow overload</div>
@@ -578,7 +623,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/design/analogous-testing.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/analogous-testing.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div> 
                     <div class="tab-content">
                         <div>
                             <div class="h3">New workflow overload</div>
@@ -668,7 +716,10 @@
 		      <div>
 		        <h2>Concept 2</h2>
 		        <b2>Etiam porta sem malesuada magna mollis euismod. Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus </b2>
-		        <img class="slideshow-img" src="images/research/slideshow-pic2.png">
+                <div class="slideshow-img-wrapper">
+                  <img class="slideshow-img" src="images/research/slideshow-pic2.png">
+                  <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots" onclick=""></span>
 		          <span class="slideshow-dots active" onclick=""></span>
@@ -682,7 +733,10 @@
 		      <div>
 		        <h2>Concept 3</h2>
 		        <b2>Etiam porta sem malesuada magna mollis euismod. Donec ullamcorper nulla non metus auctor fringilla. Cum sociis natoque penatibus </b2>
-		        <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+		        <div class="slideshow-img-wrapper">
+                  <img class="slideshow-img" src="images/research/slideshow-pic3.png">
+                  <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                </div>
 		        <div class="dots-wrapper">
 		          <span class="slideshow-dots" onclick=""></span>
 		          <span class="slideshow-dots" onclick=""></span>
