--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/ideation.html
@@ -105,7 +105,7 @@
                 <div class="arrow-text h3 text-center tablet-phone">Users</div>
                 <div class="text-box">Our team used the Crazy Eights method to generate concepts, and storyboards to envision a related experience.</div>
                 <div class="arrow-text h3 text-center tablet-phone">Product</div>
-                <div class="text-box">To evaluate our storyboards, we consulted with our clients and proxy users. Their feedback helped us finalize concepts.</div>
+                <div class="text-box">We evaluted our storyboards with our clients and proxy users. Their feedback helped us choose our best concepts.</div>
                 <div class="arrow-text h3 text-center tablet-phone">User + Product</div>
                 <div class="text-box">Knowing what concepts to pursue, our team began to make low and mid-fi prototypes to envision our ideas.</div>
             </div>
@@ -146,7 +146,10 @@
                     <div>
                         <h2>User Profiles</h2>
                         <b2>Liquidnet wants advice on measuring user-behavior data. We recommended user profiles. Users can get customized responses to app usage, and Liquidnet can collect a profile's behavioral data. </b2>
-                        <img class="slideshow-img" src="images/ideation/user-profile.png">
+                        <div class="slideshow-img-wrapper">
+                          <img class="slideshow-img" src="images/ideation/user-profile.png">
+                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                        </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
                             <span class="slideshow-dots active" onclick=""></span>
@@ -162,7 +165,10 @@
                     <div>
                         <h2>Improved Blotter and Analytics</h2>
                         <b2>Small changes to Liquidnet's existing design can increase legibility of the application. Some recommendations include changing sizing, using color and using icons to create visual hierarchy.</b2>
-                        <img class="slideshow-img" src="images/ideation/improved-analytics.jpg">
+                        <div class="slideshow-img-wrapper">
+                          <img class="slideshow-img" src="images/ideation/improved-analytics.jpg">
+                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                        </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
                             <span class="slideshow-dots" onclick=""></span>
@@ -178,7 +184,10 @@
                     <div>
                         <h2>Team Metrics for Success</h2>
                         <b2>Team metrics can be essential to traders. Traders and portfolio managers can figure out the team’s progress at a glance in-app. This is faster and more accurate than a self-generated report.</b2>
-                        <img class="slideshow-img" src="images/ideation/fintech-startup.jpg">
+                        <div class="slideshow-img-wrapper">
+                          <img class="slideshow-img" src="images/ideation/fintech-startup.jpg">
+                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                        </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
                             <span class="slideshow-dots" onclick=""></span>
@@ -194,7 +203,10 @@
                     <div>
                         <h2>Customized Alert System</h2>
                         <b2>Alerts are central to trading software, as trades come in over the day or orders become executable. We want traders to be able to make their own types of alerts and categorize alerts as well.</b2>
-                        <img class="slideshow-img" src="images/ideation/custom-alerts.png">
+                        <div class="slideshow-img-wrapper">
+                          <img class="slideshow-img" src="images/ideation/custom-alerts.png">
+                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                        </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
                             <span class="slideshow-dots" onclick=""></span>
@@ -218,7 +230,10 @@
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 1)"><b2>Storyboarding</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/design/crazy-eights-2.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/design/crazy-eights-2.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -241,7 +256,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/storyboard.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/storyboard.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -367,7 +385,10 @@
                     <button class="tab-navbutton active blue" onclick="changeTab(this, 0)"><b2>Speed Dating</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/ideation/client-call.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/ideation/client-call.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Showing our Storyboards</div>
@@ -400,7 +421,9 @@
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 1)"><b2>Team Focus</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/ideation/sdating-notes.png">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/ideation/sdating-notes.png"><img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Valuable Ideas</div>
@@ -421,7 +444,9 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/ideation/client-feedback.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/ideation/client-feedback.jpg"><img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Our New Direction</div>
@@ -477,7 +502,10 @@
                     <div>
                         <h2>Analytics and Blotter</h2>
                         <b2>We made analytics and the blotter more readable by using visual icons and cues on the graph. We also add more opportunities to interact by adding hover-over text. </b2>
-                        <img class="slideshow-img" src="images/analytics.png">
+                        <div class="slideshow-img-wrapper">
+                          <img class="slideshow-img" src="images/analytics.png">
+                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                        </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
                             <span class="slideshow-dots active" onclick=""></span>
@@ -492,7 +520,10 @@
                     <div>
                         <h2>Team Metrics</h2>
                         <b2>On the left, we see all team actions with key information (names, volume, price) listed. On the right shows a potential way to represent individual and team performance. </b2>
-                        <img class="slideshow-img" src="images/Teamwork.png">
+                        <div class="slideshow-img-wrapper">
+                          <img class="slideshow-img" src="images/Teamwork.png">
+                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                        </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
                             <span class="slideshow-dots" onclick=""></span>
@@ -507,7 +538,10 @@
                     <div>
                         <h2>Flexible Layout</h2>
                         <b2>To give traders a customizable experience, we designed for a flexible layout with movable tabs. Different traders may rearrange their front-end to suit their trading style.</b2>
-                        <img class="slideshow-img" src="images/mid-fi1.png">
+                        <div class="slideshow-img-wrapper">
+                          <img class="slideshow-img" src="images/mid-fi1.png">
+                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                        </div>
                         <div class="dots-wrapper">
                             <span class="slideshow-dots" onclick=""></span>
                             <span class="slideshow-dots" onclick=""></span>
@@ -566,7 +600,10 @@
                     <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 0)">
                     <div>
                         <h2>Low Fidelity (2nd round)</h2>
-                        <img class="slideshow-img" src="images/ideation/midfi-1.png">
+                        <div class="slideshow-img-wrapper">
+                          <img class="slideshow-img" src="images/ideation/midfi-1.png">
+                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                        </div>
                         <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -599,7 +636,10 @@
                     <img class="slideshow-button" src="images/research/slideshow-left.svg" onclick="showDivs(this, 1)">
                     <div>
                         <h2>Mid Fidelity</h2>
-                        <img class="slideshow-img" src="images/ideation/midfi-2.png">
+                        <div class="slideshow-img-wrapper">
+                          <img class="slideshow-img" src="images/ideation/midfi-2.png">
+                          <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                        </div>
                         <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -641,7 +681,10 @@
                     <button class="tab-navbutton blue"  onclick="changeTab(this, 1)"><b2>Team Focus</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/ideation/preso-client.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/ideation/preso-client.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -664,7 +707,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/ideation/preso-notes.jpg">
+                    <div class="slideshow-img-wrapper">
+                      <img class="tab-cover-image" src="images/ideation/preso-notes.jpg">
+                      <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
