--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/research.html
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </div>
-        <div class="smaller-section flex-h mobile-v" >
+        <div class="smaller-section flex-h mobile-v">
             <img src="images/research/persona3.png" class="flexblock-headshot image left"/>
             <div>
                 <div class="card-title">Jane the Portfolio Manager</div>
@@ -182,7 +182,10 @@
                     <button class="tab-navbutton"  onclick="changeTab(this, 3)"><b2>Role Playing</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/research/interview.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/interview.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -205,7 +208,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/collaborative-sketching.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/collaborative-sketching.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -228,7 +234,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/poker.png">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/poker.png">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -251,7 +260,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/bestbroker.png">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/bestbroker.png">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Observation 1</div>
@@ -287,17 +299,11 @@
                     <button class="tab-navbutton"  onclick="changeTab(this, 2)"><b2>Screen Allocation</b2></button>
                     <button class="tab-navbutton"  onclick="changeTab(this, 3)"><b2>Affinity Diagram</b2></button>
                 </div>
-                <!-- <div class="tab-navbar-ipad">
-                    <button class="tab-navbutton active" onclick="changeTab(this, 0)"><b2>Stakeholder Map</b2></button>
-                    <button class="tab-navbutton"  onclick="changeTab(this, 1)"><b2>Customer Journey Map</b2></button>
-                </div>
-                <div class="tab-navbar-ipad">
-                    <button class="tab-navbutton"  onclick="changeTab(this, 2)"><b2>Screen Allocation</b2></button>
-                    <button class="tab-navbutton"  onclick="changeTab(this, 3)"><b2>Affinity Diagram</b2></button>
-                </div>   --> 
-                
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/research/stakeholder-map.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/stakeholder-map.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Insight 1</div>
@@ -320,7 +326,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/customer-journey-map.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/customer-journey-map.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Insight 1</div>
@@ -343,7 +352,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/screen-allocation.png">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/screen-allocation.png">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Insight 1</div>
@@ -366,7 +378,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/affinity-diagram-2.png">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/affinity-diagram-2.png">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="label grey-text">Insight 1</div>
@@ -440,7 +455,10 @@
                     <button class="tab-navbutton"  onclick="changeTab(this, 2)"><b2>Heuristic Evaluation</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/research/competitor.png">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/competitor.png">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Competitors</div>
@@ -461,7 +479,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/Passive-Match-Flow-p-1080.jpeg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/Passive-Match-Flow-p-1080.jpeg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Product and features</div>
@@ -482,7 +503,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/heval.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/heval.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Industry standards</div>
@@ -516,7 +540,10 @@
                     <button class="tab-navbutton"  onclick="changeTab(this, 2)"><b2>Emotions and Stress</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/research/product-usability-2.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/product-usability-2.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Workflow overload</div>
@@ -537,7 +564,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/usability-2.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/usability-2.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Juggling workflows</div>
@@ -558,7 +588,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/trading_floor-2.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/trading_floor-2.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Information overload</div>
@@ -628,7 +661,10 @@
                     <button class="tab-navbutton"  onclick="changeTab(this, 1)"><b2>Client Feedback</b2></button>
                 </div>
                 <div class="tab-page active">
+                    <div class="slideshow-img-wrapper">
                     <img class="tab-cover-image" src="images/service-blueprint.png">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">Overall Trends</div>
@@ -649,7 +685,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/research/feedback-2.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/research/feedback-2.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content"><div>
                         <div class="h3">Workflow overload</div>
                             <ul class="tab-bullet">
@@ -684,7 +723,10 @@
                     <button class="tab-navbutton"  onclick="changeTab(this, 3)"><b2>Value Proposition</b2></button>
                 </div>
                 <div class="tab-page active">
-                    <img class="tab-cover-image" src="images/walking-the-wall.JPG">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/walking-the-wall.JPG">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">What we did</div>
@@ -701,7 +743,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/20q.jpg">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/20q.jpg">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">What we did</div>
@@ -719,7 +764,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/reverse.JPG">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/reverse.JPG">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">What we did</div>
@@ -736,7 +784,10 @@
                     </div>
                 </div>
                 <div class="tab-page">
-                    <img class="tab-cover-image" src="images/prop.png">
+                    <div class="slideshow-img-wrapper">
+                        <img class="tab-cover-image" src="images/prop.png">
+                        <img class="expand-icon" src="images/Utility/img-expand-icon.svg">
+                    </div>
                     <div class="tab-content">
                         <div>
                             <div class="h3">What we did</div>
